--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       name="Coffee Buy is a web ui made by Tailwind CSS"
       content="Coffee Buy is a web ui made by Tailwind CSS"
     />
+    <meta property="og:image" content="https://i.ibb.co/tHp4PzM/coffee.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
