--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Coffee Buy is a web ui made by Tailwind CSS"
-      content="Coffee Buy is a web ui made by Tailwind CSS"
+      name="Coffee Treat Landing Page"
+      content="Coffee Treat Landing Page"
     />
-    <meta property="og:image" content="https://i.ibb.co/tHp4PzM/coffee.png" />
+    <meta property="og:image" content="../src/assets/coffee.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>COFFEE - BUY</title>
+    <title>COFFEE - Treat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
