--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="Coffee Treat Landing Page"
       content="Coffee Treat Landing Page"
     />
-    <meta property="og:image" content="../src/assets/coffee.png" />
+    <meta property="og:image" content="https://i.ibb.co/4YLYQ4w/coffee.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <!--
